# Adventure

./: CMakeLists.txt
engine/: CMakeLists.txt  adventure.cpp  common.h
engine/audio/: CMakeLists.txt
engine/core/: CMakeLists.txt
engine/core/events/: event.h
engine/core/framework/: assert.h  common.h  loglevel.h  logoutput.h  messageboxlogoutput.cpp  messageboxlogoutput.h  ostreamlogoutput.cpp  ostreamlogoutput.h
engine/core/main/: engineimpl.cpp  engineimpl.h  engineutils.cpp  engineutils.h
engine/core/system/: sdlsystem.cpp  sdlsystem.h  system.cpp  system.h
engine/public/: adventure.h  c6id_common.h  c6id_uncommon.h
engine/public/core/: engine.h
launcher/: CMakeLists.txt  main.cpp
